<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/Banner" android:background="@color/banner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/sg_logo" />
    <TextView android:textSize="20.0sp" android:textColor="@color/ECGgraph" android:id="@id/ECGgraph_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ECGgraph_label" android:layout_below="@id/Banner" android:layout_alignParentRight="true" />
    <com.example.seizeguard.LineGraph android:id="@id/ECGgraph" android:layout_width="fill_parent" android:layout_height="250.0dip" android:layout_below="@id/Banner" />
    <View android:id="@id/break1" android:background="@color/breaks" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/ECGgraph" />
    <TextView android:textSize="20.0sp" android:textColor="@color/HRgraph" android:id="@id/HRgraph_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/HRgraph_label" android:layout_below="@id/break1" android:layout_alignParentRight="true" />
    <com.example.seizeguard.LineGraph android:id="@id/RtoRgraph" android:layout_width="fill_parent" android:layout_height="250.0dip" android:layout_below="@id/break1" />
    <View android:id="@id/break2" android:background="@color/breaks" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/RtoRgraph" />
    <View android:id="@id/break3" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_below="@id/break2" />
    <View android:id="@id/break4" android:background="@android:color/white" android:layout_width="475.0dip" android:layout_height="65.0dip" android:layout_below="@id/break3" />
    <ImageView android:id="@id/heart_pic" android:layout_width="75.0dip" android:layout_height="65.0dip" android:src="@drawable/hr_pulse" android:layout_toRightOf="@id/break4" android:layout_below="@id/break3" android:contentDescription="@string/beating_heart" />
    <TextView android:textSize="100.0sp" android:textColor="@color/HRnum" android:gravity="bottom" android:id="@id/labelHeartRate" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="@string/HR" android:height="120.0dip" android:width="200.0dip" android:layout_below="@id/RtoRgraph" android:layout_alignParentRight="true" />
    <ImageView android:id="@id/Hstatus_label" android:layout_width="250.0dip" android:layout_height="50.0dip" android:src="@drawable/status" android:layout_below="@id/break4" android:contentDescription="@string/health_status" />
    <ImageView android:id="@id/health_status" android:layout_width="425.0dip" android:layout_height="200.0dip" android:src="@drawable/normal" android:layout_below="@id/break6" android:contentDescription="@string/health_status" />
    <TextView android:textSize="20.0sp" android:id="@id/Cstatus_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cstatus_label" android:layout_below="@id/health_status" />
    <TextView android:textSize="30.0sp" android:id="@id/connection_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connection_status" android:height="100.0dip" android:width="400.0dip" android:layout_below="@id/Cstatus_label" android:layout_alignParentLeft="true" />
    <View android:id="@id/break5" android:background="@android:color/white" android:layout_width="550.0dip" android:layout_height="10.0dip" android:layout_below="@id/Hstatus_label" />
    <View android:id="@id/break6" android:background="@android:color/white" android:layout_width="700.0dip" android:layout_height="25.0dip" android:layout_below="@id/Hstatus_label" />
    <ImageView android:id="@id/gauge" android:layout_width="190.0dip" android:layout_height="190.0dip" android:src="@drawable/gauge" android:layout_toRightOf="@id/break5" android:layout_below="@id/break6" android:contentDescription="@string/beating_heart" />
    <View android:id="@id/break7" android:background="@android:color/white" android:layout_width="700.0dip" android:layout_height="0.0dip" android:layout_below="@id/connection_status" />
    <ImageButton android:id="@id/demo" android:background="@null" android:padding="5.0dip" android:layout_width="250.0dip" android:layout_height="300.0dip" android:src="@drawable/demo" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_below="@id/break7" android:layout_alignParentLeft="true" android:onClick="demo_view" />
    <ImageButton android:id="@id/history" android:background="@null" android:padding="5.0dip" android:layout_width="250.0dip" android:layout_height="300.0dip" android:src="@drawable/history" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_below="@id/break7" android:layout_alignParentRight="true" android:onClick="history_view" />
</RelativeLayout>
